Remember permissions in the plugin.yml file.

--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: MobArena
 author: garbagemule
 main: com.garbagemule.MobArena.MobArena
-version: 0.94.4.98.4
+version: 0.94.4.98.7
 softdepend: [Spout,Towny,Heroes,MagicSpells,Vault]
 commands:
     ma:
@@ -73,6 +73,7 @@ permissions:
             mobarena.setup.setregion: true
             mobarena.setup.expandregion: true
             mobarena.setup.showregion: true
+            mobarena.setup.showspawns: true
             mobarena.setup.setlobbyregion: true
             mobarena.setup.expandlobbyregion: true
             mobarena.setup.setwarp: true
@@ -80,6 +81,7 @@ permissions:
             mobarena.setup.containers: true
             mobarena.setup.leaderboards: true
             mobarena.setup.checkdata: true
+            mobarena.setup.checkspawns: true
             mobarena.setup.classes: true
             mobarena.setup.config: true
             mobarena.setup.autogenerate: true
@@ -111,6 +113,9 @@ permissions:
     mobarena.setup.showregion:
         description: Show arena region.
         default: false
+    mobarena.setup.showspawns:
+        description: Show arena spawnpoints.
+        default: false
     mobarena.setup.setlobbyregion:
         description: Set lobby region points l1/l2.
         default: false
@@ -131,6 +136,9 @@ permissions:
         default: false
     mobarena.setup.checkdata:
         description: Check which points need to be set up.
+        default: false
+    mobarena.setup.checkspawns:
+        description: Check which spawnpoints cover your location.
         default: false
     mobarena.setup.classes:
         description: Allows setting up classes from in-game
