--- a/language files/zh_TW/announcements.properties
+++ b/language files/zh_TW/announcements.properties
@@ -1,51 +1,70 @@
-ARENA_START=開始廝殺吧!
-ARENA_END=競技場已經結束.
-ARENA_DOES_NOT_EXIST=這個競技場不存在. 輸入 /ma arenas 取得清單.
-JOIN_PLAYER_JOINED=玩家加入競技場.
-JOIN_NOT_ENABLED=怪物競技場尚未啟用.
-JOIN_IN_OTHER_ARENA=你已加入了別的競技場! 輸入 /ma leave 來退出.
-JOIN_ARENA_NOT_ENABLED=這個競技場尚未啟用.
-JOIN_ARENA_NOT_SETUP=這個競技場還沒設定好.
-JOIN_ARENA_PERMISSION=沒有權限加入這個競技場.
-JOIN_FEE_REQUIRED=餘額不足. 費用: %
-JOIN_FEE_PAID=加入的費用為: %
-JOIN_ARENA_IS_RUNNING=這個競技場正在進行中.
-JOIN_ALREADY_PLAYING=你已經在競技場中!
-JOIN_ARG_NEEDED=必須指定一個競技場. 輸入 /ma arenas 取得清單.
-JOIN_TOO_FAR=距離競技場太遙遠以至於無法 加入/觀看.
-JOIN_EMPTY_INV=加入競技場前必須清除身上的物品.
-JOIN_PLAYER_LIMIT_REACHED=這個競技場已經有太多的玩家.
+ARENA_START=開始屠殺吧!|競技場開始!
+ARENA_END=競技場已經結束.|競技場結束.
+ARENA_DOES_NOT_EXIST=這個競技場不存在. 輸入 /ma arenas 取得清單.|無此競技場.
+ARENA_LBOARD_NOT_FOUND=這個競技場並沒有設定排行榜.
+ARENA_AUTO_START=競技場將於 % 秒後開始.
+JOIN_NOT_ENABLED=怪物競技場尚未啟用.|怪物競技場已停用.
+JOIN_IN_OTHER_ARENA=你已加入了別的競技場! 輸入 /ma leave 來退出.|正在其他競技場.
+JOIN_ARENA_NOT_ENABLED=這個競技場尚未啟用.|競技場已停用.
+JOIN_ARENA_NOT_SETUP=這個競技場還沒設定好.|競技場尚未設定.
+JOIN_ARENA_EDIT_MODE=這個競技場正處於編輯模式.|競技場處於編輯模式.
+JOIN_ARENA_PERMISSION=沒有權限加入這個競技場.|沒有權限.
+JOIN_FEE_REQUIRED=餘額不足. 費用: %|費用: %
+JOIN_FEE_PAID=加入的費用為: %|費用: %
+JOIN_ARENA_IS_RUNNING=這個競技場正在進行中.|正在進行中!
+JOIN_ALREADY_PLAYING=你已經在競技場中!|正在廝殺中!
+JOIN_ARG_NEEDED=你必須指定一個競技場. 輸入 /ma arenas 取得清單.
+JOIN_NO_PERMISSION=你沒有權限加任何入競技場.
+JOIN_TOO_FAR=距離競技場太遙遠以至於無法加入/觀看.
+JOIN_EMPTY_INV=加入競技場前必須清除身上的物品.|清除身上的物品.
+JOIN_PLAYER_LIMIT_REACHED=這個競技場已經有太多的玩家.|沒有多餘的空位.
 JOIN_STORE_INV_FAIL=無法儲存個人物品. 請再試一次.
-LEAVE_PLAYER_LEFT=離開競技場. 感謝你的參與!
-LEAVE_NOT_PLAYING=你並不在競技場中.
-PLAYER_DIED=% 死亡!
-SPEC_PLAYER_SPECTATE=好好享受這精彩的表演!
-SPEC_NOT_RUNNING=這個競技場尚未開始.
-SPEC_ARG_NEEDED=必須指定一個競技場. 輸入 /ma arenas 取得清單.
-SPEC_EMPTY_INV=請先清除身上的物品!
-SPEC_ALREADY_PLAYING=你無法觀賞自己的表演!
+JOIN_EXISTING_INV_RESTORED=已經還原你身上的物品.
+JOIN_PLAYER_JOINED=你加入競技場. 玩的愉快!|加入競技場.
+LEAVE_NOT_PLAYING=你並不在競技場中.|不在競技場中.
+LEAVE_PLAYER_LEFT=你已離開競技場. 感謝參與!!|離開競技場.
+PLAYER_DIED=% 死亡!|% 死亡!
+GOLEM_DIED=一個友方的鐵巨人已死亡!|友方鐵巨人死亡!
+SPEC_PLAYER_SPECTATE=好好享受這精彩的表演!|享受這精彩的表演!
+SPEC_FROM_ARENA=好好享受接下來的表演!|享受這精彩的表演!
+SPEC_NOT_RUNNING=這個競技場尚未開始.|競技場尚未開始.
+SPEC_EMPTY_INV=請先清除你身上的物品!|清除身上的物品.
+SPEC_ALREADY_PLAYING=你無法觀賞自己的表演!|正在廝殺中!
 NOT_READY_PLAYERS=尚未準備好: %
-FORCE_START_STARTED=強制啟動競技場.
-FORCE_START_RUNNING=競技場已啟動.
-FORCE_START_NOT_READY=無法強制啟動, 尚未有玩家準備好.
-FORCE_END_ENDED=強制結束競技場.
+FORCE_START_RUNNING=競技場已開始.
+FORCE_START_NOT_READY=無法強制開始, 尚未有玩家準備好.
+FORCE_START_STARTED=強制開始競技場.
 FORCE_END_EMPTY=沒有人在競技場裡.
+FORCE_END_ENDED=強制結束競技場.
 FORCE_END_IDLE=你的動作不夠快!
 REWARDS_GIVE=這些是你的獎賞!
-LOBBY_CLASS_PICKED=選擇 % 作為你的職業!
-LOBBY_CLASS_RANDOM=當競技場開始時你將會隨機獲得一個職業.
-LOBBY_CLASS_PERMISSION=沒有權限使用這個職業!
-LOBBY_PLAYER_READY=你已經準備好了!
-LOBBY_DROP_ITEM=無法在競技場開始前分享物品!
-LOBBY_PICK_CLASS=你必須先選擇一個職業!
-LOBBY_RIGHT_CLICK=用滑鼠左鍵點擊告示排而不是右鍵.
-WARP_TO_ARENA=無法在戰鬥時傳送到競技場!
+LOBBY_DROP_ITEM=無法在競技場開始前分享物品!|這裡不允許丟下東西.
+LOBBY_PLAYER_READY=你已經準備好了!|準備好了!
+LOBBY_PICK_CLASS=你必須先選擇一個職業!|選擇一個職業!
+LOBBY_CLASS_FULL=已經無法選擇這個職業, 已達職業上限!|已達職業上限!
+LOBBY_NOT_ENOUGH_PLAYERS=沒有足夠的玩家. 至少需要 % 個玩家.|需要更多的玩家.
+LOBBY_RIGHT_CLICK=用滑鼠左鍵點擊告示排.|點擊告示排.
+LOBBY_CLASS_PICKED=選擇 % 作為你的職業!|%
+LOBBY_CLASS_RANDOM=競技場開始時你將會隨機獲得一個職業.
+LOBBY_CLASS_PERMISSION=沒有權限使用這個職業!|沒有權限!
+WARP_TO_ARENA=不允許傳送到競技場!
 WARP_FROM_ARENA=這個競技場不允許傳送!
-WAVE_DEFAULT=準備迎戰第 #% 批怪物!
-WAVE_SPECIAL=準備迎戰第 #% 批怪物! [特殊]
-WAVE_REWARD=獲得獎勵: %
-MISC_LIST_ARENAS=可加入的競技場: %
+WAVE_DEFAULT=第 #% 批!|第 #% 批!
+WAVE_SPECIAL=第 #% 批! [特殊]|第 #% 批! [特殊]
+WAVE_SWARM=第 #% 批! [大量]|Wave #%! [大量]
+WAVE_SUPPLY=第 #% 批! [支援]|第 #% 批! [支援]
+WAVE_UPGRADE=第 #% 批! [升級]|第 #% 批! [升級]
+WAVE_BOSS=第 #% 批! [魔王]|第 #% 批! [魔王]
+WAVE_BOSS_ABILITY=魔王使用能力: %!|魔王: %
+WAVE_BOSS_LOW_HEALTH=魔王瀕臨死亡邊緣了!|魔王快死了!
+WAVE_REWARD=你獲得獎勵: %|獎勵: %
 MISC_LIST_PLAYERS=已加入的玩家: %
-MISC_COMMAND_NOT_ALLOWED=無法在競技場使用這個指令!
-MISC_NO_ACCESS=無權使用這個指令.
+MISC_LIST_ARENAS=可加入的競技場: %
+MISC_COMMAND_NOT_ALLOWED=你無法在競技場使用這個指令!
+MISC_NO_ACCESS=你無權使用這個指令.
+MISC_NOT_FROM_CONSOLE=你無法在控制台使用這個指令.
+MISC_HELP=如要取得指令清單, 輸入 /ma help
+MISC_MULTIPLE_MATCHES=你是指這其中一個指令?
+MISC_NO_MATCHES=沒有這個指令. 輸入 /ma help 來取得說明.
+MISC_MA_LEAVE_REMINDER=記得輸入 /ma leave 來離開競技場.
 MISC_NONE=<none>
