Update announcements.properties for version 0.95.5.

--- a/language files/zh_TW/announcements.properties
+++ b/language files/zh_TW/announcements.properties
@@ -22,6 +22,7 @@ JOIN_STORE_INV_FAIL=無法儲存個人物品. 請再試一次.
 JOIN_EXISTING_INV_RESTORED=已經還原你身上的物品.
 JOIN_PLAYER_JOINED=你加入競技場. 玩的愉快!|加入競技場.
 LEAVE_NOT_PLAYING=你並不在競技場中.|不在競技場中.
+LEAVE_NOT_READY=你並沒有在限定的時間準備好! 下一次, 記得於準備好時點擊鐵磚.
 LEAVE_PLAYER_LEFT=你已離開競技場. 感謝參與!!|離開競技場.
 PLAYER_DIED=% 死亡!|% 死亡!
 GOLEM_DIED=一個友方的鐵巨人已死亡!|友方鐵巨人死亡!
