Add global end announcement feature.

--- a/resources/res/settings.yml
+++ b/resources/res/settings.yml
@@ -38,3 +38,4 @@ use-class-chests: false
 display-waves-as-level: false
 display-timer-as-level: false
 use-scoreboards: true
+global-end-announce: false
