Make sure we load AFTER Multiverse, just in case.

--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -2,7 +2,7 @@ name: MobArena
 author: garbagemule
 main: com.garbagemule.MobArena.MobArena
 version: 0.95.5.16
-softdepend: [Spout,Towny,Heroes,MagicSpells,Vault]
+softdepend: [Multiverse-Core,Spout,Towny,Heroes,MagicSpells,Vault]
 commands:
     ma:
         description: Base command for MobArena
