--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: MobArena
 author: garbagemule
 main: com.garbagemule.MobArena.MobArena
-version: 0.95.5.17
-softdepend: [Multiverse-Core,Spout,Towny,Heroes,MagicSpells,Vault]
+version: 0.95.5.18
+softdepend: [Multiverse-Core,Towny,Heroes,MagicSpells,Vault]
 commands:
     ma:
         description: Base command for MobArena
