Implement start-delay-timer.
The StartDelayTimer wraps the AutoStartTimer and provides a means of
"locking" the lobby until a configurable time has passed. During this
time, it is possible for other players to join the lobby and ready up,
but the arena will not start until the StartDelayTimer has run out,
after which the AutoStartTimer is started (if applicable).

New per-arena setting: start-delay-timer: [seconds]
New announcement: arena-start-delay

--- a/resources/res/settings.yml
+++ b/resources/res/settings.yml
@@ -30,6 +30,7 @@ lock-food-level: true
 player-time-in-arena: world
 auto-ignite-tnt: false
 auto-start-timer: 0
+start-delay-timer: 0
 auto-ready: false
 use-class-chests: false
 display-waves-as-level: false
