--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,10 @@
   </repositories>
 
   <dependencies>
-    <!-- Spigot API -->
+    <!-- Spigot-Bukkit API -->
     <dependency>
-      <groupId>org.spigotmc</groupId>
-      <artifactId>spigot-api</artifactId>
+      <groupId>org.bukkit</groupId>
+      <artifactId>bukkit</artifactId>
       <version>1.8.7-R0.1-SNAPSHOT</version>
     </dependency>
     <!-- Vault -->
