--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
     <!-- Vault repo -->
     <repository>
       <id>vault-repo</id>
-      <url>http://nexus.theyeticave.net/content/repositories/pub_releases/</url>
+      <url>http://nexus.hc.to/content/repositories/pub_releases</url>
     </repository>
   </repositories>
 
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.8.7-R0.1-SNAPSHOT</version>
+      <version>1.11-R0.1-SNAPSHOT</version>
     </dependency>
 
     <!-- Vault -->
