Add support for a per-arena default class.

--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -2,6 +2,7 @@ world: ''
 enabled: true
 protect: true
 entry-fee: ''
+default-class: ''
 clear-wave-before-next: false
 clear-boss-before-next: false
 clear-wave-before-boss: false
