--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 
   <groupId>com.garbagemule</groupId>
   <artifactId>mobarena</artifactId>
-  <name>MobArena</name>
-  <version>0.97.6-SNAPSHOT</version>
+  <name>PazArena</name>
+  <version>1.1.2</version>
 
   <build>
     <plugins>
