--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ${project.name}
 author: garbagemule
 main: com.garbagemule.MobArena.MobArena
-version: ${project.version}
+version: '${project.version}'
 softdepend: [Multiverse-Core,Towny,Heroes,MagicSpells,Vault]
 commands:
     ma:
