--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,8 @@
     <!-- Mockito -->
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.10.19</version>
+      <artifactId>mockito-core</artifactId>
+      <version>2.18.3</version>
     </dependency>
   </dependencies>
 </project>
