--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
       <version>1.11-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Vault -->
@@ -69,6 +70,7 @@
       <groupId>net.milkbowl.vault</groupId>
       <artifactId>VaultAPI</artifactId>
       <version>1.5</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Magic Spells (tentative) -->
@@ -85,6 +87,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
+      <scope>test</scope>
     </dependency>
 
     <!-- Hamcrest matchers -->
@@ -92,6 +95,7 @@
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
       <version>1.3</version>
+      <scope>test</scope>
     </dependency>
 
     <!-- Mockito -->
@@ -99,6 +103,7 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>2.18.3</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
