Help Maven calm down.
It's just UTF-8, Maven. No need to throw warnings all over the place...

This commit fixes some of the source encoding warnings Maven would print during compilation.

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
   <name>MobArena</name>
   <version>0.100.3-SNAPSHOT</version>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <build>
     <plugins>
       <!-- Use Java 8 for compilation -->
