Add support for boss health bars.
Three different types of health bars are implemented behind a basic Strategy Pattern. A new per-arena setting, boss-health-bar, can be used to configure which one of the three types (if any) of health bar should be used for bosses in the given arena:

- `boss-bar` creates a boss bar at the top of the screen as if the players were fighting an ender dragon or a wither.
- `title` uses the Chapters/Titles API in Bukkit to display the health of the boss as a "subtitle" whenever it takes damage.
- `name` sets the entitiy's health along with an optional custom name above the entity's head.

--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -34,6 +34,7 @@ auto-start-timer: 0
 start-delay-timer: 0
 auto-ready: false
 use-class-chests: false
+boss-health-bar: boss-bar
 display-waves-as-level: false
 display-timer-as-level: false
 use-scoreboards: true
