--- a/src/main/resources/res/classes.yml
+++ b/src/main/resources/res/classes.yml
@@ -1,15 +1,18 @@
 Knight:
-    items: diamond_sword, potion:8197:3
-    armor: 306,307,308,309
+  items: diamond_sword, potion:instant_heal:3
+  armor: iron_helmet, iron_chestplate, iron_leggings, iron_boots
 Tank:
-    items: iron_sword, potion:8229:2
-    armor: 310,311,312,313
+  items: iron_sword, potion:instant_heal:2
+  armor: diamond_helmet, diamond_chestplate, diamond_leggings, diamond_boots
+  effects: slow, health_boost
 Archer:
-    items: wood_sword, bow, arrow:256, potion:8197:3, bone
-    armor: 298,299,300,301
+  items: wood_sword, bow, arrow:256, potion:instant_heal:3, bone
+  armor: leather_helmet, leather_chestplate, leather_leggings, leather_boots
+  effects: speed
 Chemist:
-    items: stone_sword, potion:16428:30, potion:16388:8, potion:16389:20, potion:8197:3, potion:8226:1
-    armor: 314,315,316,317
+  items: stone_sword, splash_potion:instant_damage:30, splash_potion:poison:8, splash_potion:instant_heal:20, potion:instant_heal:3
+  armor: chainmail_helmet, chainmail_chestplate, chainmail_leggings, chainmail_boots
+  effects: speed:1
 Oddjob:
-    items: stone_sword, flint_and_steel, netherrack:2, tnt:4, potion:8197:3
-    armor: 298,299,300,301
+  items: stone_sword, flint_and_steel, netherrack:2, tnt:4, potion:instant_heal:3
+  armor: leather_helmet, leather_chestplate, leather_leggings, leather_boots
