--- a/src/main/resources/res/rewards.yml
+++ b/src/main/resources/res/rewards.yml
@@ -4,6 +4,6 @@ waves:
         '5': dirt:4, gravel:4, stone:4
         '10': iron_ingot:10, gold_ingot:8
     after:
-        '7': minecart, storage_minecart, powered_minecart
-        '13': iron_sword, iron_pickaxe, iron_spade
+        '7': minecart, chest_minecart, furnace_minecart
+        '13': iron_sword, iron_pickaxe, iron_shovel
         '16': diamond_sword
