--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -21,6 +21,7 @@ min-players: 0
 max-players: 0
 max-join-distance: 0
 first-wave-delay: 5
+next-wave-delay: 0
 wave-interval: 15
 final-wave: 0
 monster-limit: 100
