Add join-interrupt-timer per-arena setting.
This commit adds a new per-arena setting, join-interrupt-timer, which, when set to a positive number, will introduce a delay to the join and spec commands. During this delay, if the player takes damage or moves more than one block's distance, the command will be interrupted.

Closes #482

--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -20,6 +20,7 @@ share-items-in-arena: true
 min-players: 0
 max-players: 0
 max-join-distance: 0
+join-interrupt-timer: 0
 first-wave-delay: 5
 next-wave-delay: 0
 wave-interval: 15
