Change the fallback command error message.
This is a little less panicky, and it doesn't reference IRC (which is basically dead).

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,10 +7,8 @@ commands:
     ma:
         description: Base command for MobArena
         usage: |
-            YOU HAVE AN ERROR!
-            Find the error in your server log, copy it into
-            http://pastebin.com, and then paste the link
-            in the IRC or on the forums.
+            MobArena failed to load.
+            There is an error in your server log with details.
         aliases: [mobarena]
 permissions:
     mobarena.use.join:
