Bring keep-exp per-arena setting back.
This setting was removed a long time ago, likely by "happy mistake" in a larger refactoring.

When enabled, players are granted any collected experience during the arena session as a reward when they die or reach the final wave of the arena. Note that deliberately leaving the arena is not included here, because "leaving" an arena is a highly ambiguous and conditional concept at the time of this commit. Figuring out when and how the experience reward should be added is complicated, and unless someone puts in a request for it, I think it's enough that the "legitimate" reasons for getting the experience (honorable death and reaching the final wave) are covered.

Closes #485

--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -27,6 +27,7 @@ wave-interval: 15
 final-wave: 0
 monster-limit: 100
 monster-exp: false
+keep-exp: false
 food-regen: false
 lock-food-level: true
 player-time-in-arena: world
