--- a/pom.xml
+++ b/pom.xml
@@ -84,8 +84,8 @@
     </repository>
 
     <repository>
-      <id>bstats-repo</id>
-      <url>http://repo.bstats.org/content/repositories/releases/</url>
+      <id>codemc-repo</id>
+      <url>https://repo.codemc.org/repository/maven-public/</url>
     </repository>
 
     <!-- JitPack for MagicSpells -->
@@ -115,7 +115,7 @@
     <dependency>
       <groupId>org.bstats</groupId>
       <artifactId>bstats-bukkit</artifactId>
-      <version>1.2</version>
+      <version>1.5</version>
       <scope>compile</scope>
     </dependency>
 
