--- a/pom.xml
+++ b/pom.xml
@@ -83,9 +83,10 @@
       <url>http://nexus.hc.to/content/repositories/pub_releases</url>
     </repository>
 
+    <!-- bStats repo (updated) -->
     <repository>
-      <id>bstats-repo</id>
-      <url>http://repo.bstats.org/content/repositories/releases/</url>
+      <id>CodeMC</id>
+      <url>https://repo.codemc.org/repository/maven-public</url>
     </repository>
 
     <!-- JitPack for MagicSpells -->
@@ -112,10 +113,11 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- bStats -->
     <dependency>
       <groupId>org.bstats</groupId>
       <artifactId>bstats-bukkit</artifactId>
-      <version>1.2</version>
+      <version>1.5</version>
       <scope>compile</scope>
     </dependency>
 
