Switch to CodeMC repo for bStats.
The old bStats repository has been shut down, but we can find it on CodeMC, so yay.

Fixes #578

--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 
     <repository>
       <id>bstats-repo</id>
-      <url>http://repo.bstats.org/content/repositories/releases/</url>
+      <url>http://repo.codemc.org/repository/maven-public/</url>
     </repository>
 
     <!-- JitPack for MagicSpells -->
