--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
     </repository>
   </repositories>
 
+
   <dependencies>
     <!-- Spigot-Bukkit API -->
     <dependency>
@@ -109,6 +110,13 @@
       <groupId>net.milkbowl.vault</groupId>
       <artifactId>VaultAPI</artifactId>
       <version>1.5</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
       <scope>provided</scope>
     </dependency>
 
