--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
       <url>http://repo.codemc.org/repository/maven-public/</url>
     </repository>
 
-    <!-- JitPack for Vault, MagicSpells -->
+    <!-- JitPack for Vault -->
     <repository>
       <id>jitpack.io</id>
       <url>https://jitpack.io</url>
@@ -113,14 +113,6 @@
       <artifactId>bstats-bukkit</artifactId>
       <version>1.7</version>
       <scope>compile</scope>
-    </dependency>
-
-    <!-- MagicSpells -->
-    <dependency>
-      <groupId>com.github.TheComputerGeek2</groupId>
-      <artifactId>MagicSpells</artifactId>
-      <version>3.5-Release</version>
-      <scope>provided</scope>
     </dependency>
 
     <!-- JUnit -->
