Add per-arena setting `arena-warp-offset`.
This commit introduces a quality-of-life feature for spreading players
out during the warp to the arena floor. The feature is configured via
the new per-arena setting `arena-warp-offset`. When the value is greater
than 0.01, MobArena will add a random number of units between 0 and the
offset value to the X and Z axes in either direction. For example, if
the value is set to 3, players will be teleported to a random location
in a 3x3 square centered on the arena warp, rather than directly to the
arena warp itself.

Closes #371

--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -35,6 +35,7 @@ auto-start-timer: 0
 start-delay-timer: 0
 auto-ready: false
 use-class-chests: false
+arena-warp-offset: 0
 boss-health-bar: boss-bar
 display-waves-as-level: false
 display-timer-as-level: false
