Add per-arena setting `announcer-type`.
Introduces the concept of an Announcer, which is invoked whenever the
`announce` methods on the Arena interface are invoked. Previously, all
announcements would simply be sent to the arena's Messenger, but this
new feature allows us to move them up into titles to help declutter the
somewhat overloaded chat box.

By default, to help people discover the new feature, the announcer type
is `title`, but it is possible to switch back to `chat` for the original
behavior.

Closes #272

--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -41,6 +41,7 @@ display-waves-as-level: false
 display-timer-as-level: false
 use-scoreboards: true
 isolated-chat: false
+announcer-type: title
 global-join-announce: false
 global-end-announce: false
 show-death-messages: true
