Add `/ma addreward` command.
This command takes an arena player and a Thing as input. The Thing is
parsed in the same way as all other rewards are parsed, so it supports
the new `all()` and `random()` functions and the `nothing` keyword.

The "target audience" of the command is mainly scripts. It opens up the
possibility of hooking into MobArena's rewards from command blocks or
other plugins, but with very low coupling.

Closes #643

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -46,6 +46,7 @@ permissions:
             mobarena.admin.restore: true
             mobarena.admin.force: true
             mobarena.admin.teleport: true
+            mobarena.admin.addreward: true
     mobarena.admin.enable:
         description: Enable and disable MobArena and/or arenas.
         default: false
@@ -60,6 +61,9 @@ permissions:
         default: false
     mobarena.admin.teleport:
         description: Immune to teleport blocking rules.
+        default: false
+    mobarena.admin.addreward:
+        description: Add rewards to an arena player's reward list.
         default: false
 
     mobarena.setup:
