Clean up .gitignore.
This file has an interesting history with content that goes all the way
back to MobArena's dark days of both Ant and Eclipse. This commit cleans
up the file a bit, removing a lot of unnecessary bits and pieces, and
making it a little more tightly bound to the current project setup.

--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,14 @@
-# IDE files and folders
-.project
-.classpath
-*.iml
-.idea/
-.settings/
-
-# Compiled files
+# Java
 *.class
 
-# OS files.
-.DS_Store*
-Thumbs.db
-
-# Misc folders
-bin/
-build/
-misc/
+# Maven
 target/
 
-# Misc files
-MobArena.jar
-build.properties
+# Artifacts
+*.jar
+*.zip
 
-# Virtualenv (for docs)
-# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
-.Python
-[Bb]in
-[Ii]nclude
-[Ll]ib/python*/
-[Ll]ib64
-[Ll]ocal
-[Mm]an
-[Ss]cripts
-pyvenv.cfg
-.venv
-pip-selfcheck.json
-
-# ReadTheDocs generated documentation
-docs/_build
+# IntelliJ
+.idea/
+*.iml
+out/
