Replace pig zombies in the special wave of the default config.
Replaces the `zombie-pigmen` entry in the `spec1` wave of the default
configuration with `slimes-big`. This is due to the pig zombie rework
into piglins, which makes the custom name a little flaky. If we ever
decide to ditch the custom names somehow, this will probably make such a
transition a little easier.

While `slimes-big` is also a custom name, so are `powered-creepers` and
`angry-wolves`, but at least they are "API stable" in comparison, which
is really what this change is about.

--- a/src/main/resources/res/waves.yml
+++ b/src/main/resources/res/waves.yml
@@ -15,7 +15,7 @@ recurrent:
         frequency: 4
         monsters:
             powered-creepers: 10
-            zombie-pigmen: 10
+            slimes-big: 10
             angry-wolves: 10
             blazes: 10
 single:
