Add per-arena setting `auto-leave-on-end`.
Introduces a new arena setting to force spectators to leave the arena
when the current session ends. If set to `true`, it "overrides" the
behavior of `spectate-on-death: true` when players respawn, such that
they only become spectators if there is an active arena session.

The respawn behavior technically means that it is possible for a player
to begin spectating "the next session" if a new session begins between
them dying and clicking Respawn on the death screen. Ideally, we would
want the player to auto-leave, because the session _they_ participated
in ended, but we don't have a concept of "previous sessions", so this
quirky behavior will have to do.

Closes #682

--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -15,6 +15,7 @@ pvp-enabled: false
 monster-infight: false
 allow-teleporting: false
 spectate-on-death: true
+auto-leave-on-end: false
 share-items-in-arena: true
 min-players: 0
 max-players: 0
