--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -25,6 +25,7 @@ first-wave-delay: 5
 next-wave-delay: 0
 wave-interval: 15
 final-wave: 0
+wave-threshold: 0
 monster-limit: 100
 monster-exp: false
 keep-exp: false
