--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -7,6 +7,7 @@ default-class: ''
 clear-wave-before-next: false
 clear-boss-before-next: false
 clear-wave-before-boss: false
+end-after-final-boss-kill: false
 soft-restore: false
 soft-restore-drops: false
 require-empty-inv-join: false
@@ -25,8 +26,8 @@ first-wave-delay: 5
 next-wave-delay: 0
 wave-interval: 15
 final-wave: 0
-wave-threshold: 0
 monster-limit: 100
+clear-wave-leeway: 0
 monster-exp: false
 keep-exp: false
 food-regen: false
