--- a/pom.xml
+++ b/pom.xml
@@ -132,5 +132,13 @@
       <version>3.12.4</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- Lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.22</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
