--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -33,6 +33,7 @@ food-regen: false
 lock-food-level: true
 player-time-in-arena: world
 auto-ignite-tnt: false
+auto-ignite-fuse: 80
 auto-start-timer: 0
 start-delay-timer: 0
 auto-ready: false
