add reward per kill, add aggregator for monetary rewards to prevent player spam at end of game, add player notification for kills per wave

--- a/src/main/resources/res/settings.yml
+++ b/src/main/resources/res/settings.yml
@@ -48,3 +48,7 @@ announcer-type: title
 global-join-announce: false
 global-end-announce: false
 show-death-messages: true
+custom-reward-per-kill: false
+custom-reward-per-kill-0-5: $5
+custom-reward-per-kill-5-10: $7.5
+custom-reward-per-kill-10+: $10
