--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+          <compilerArgument>-Xlint:all</compilerArgument>
         </configuration>
       </plugin>
 
