Add `mobarena.admin.errors` permission.
Introduces a new permission for "admins" that can be used to increase
visibility of errors caught by the plugin. Server owners may not want
_all_ online players to see these types of messages, so the permission
gives error handlers a way to filter the list of online players before
sending the error message.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -47,6 +47,7 @@ permissions:
             mobarena.admin.force: true
             mobarena.admin.teleport: true
             mobarena.admin.addreward: true
+            mobarena.admin.errors: true
     mobarena.admin.enable:
         description: Enable and disable MobArena and/or arenas.
         default: false
@@ -64,6 +65,9 @@ permissions:
         default: false
     mobarena.admin.addreward:
         description: Add rewards to an arena player's reward list.
+        default: false
+    mobarena.admin.errors:
+        description: Get notified when an arena encounters errors.
         default: false
 
     mobarena.setup:
