Add support for saved items.
Introduces the concept of a _saved item_; an in-game item that has been
captured in a YAML file via Bukkit's item serialization mechanism. These
items can be referenced in the config-file in all places that any other
normal item can be used, assuming the ThingManager is in charge of the
parsing. This should help bridge the gap between class chests and the
config-file by allowing any Bukkit serializable item stack to be stored
and referenced as if MobArena's item syntax directly supported it.

Three new setup commands are introduced to help manage the items, such
that they can be created, deleted, and loaded (for "editing" purposes).
The commands are somewhat rough around the edges and may need a little
bit of polish going forward.

Together with the new inventory referencing Things, this functionality
should help provide most of the flexibility people have been missing
from the item syntax for about a decade... Hell, it's about time.

Closes #212

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -85,6 +85,9 @@ permissions:
             mobarena.setup.leaderboards: true
             mobarena.setup.autogenerate: true
             mobarena.setup.autodegenerate: true
+            mobarena.setup.saveitem: true
+            mobarena.setup.deleteitem: true
+            mobarena.setup.loaditem: true
     mobarena.setup.config:
         description: Save or reload the config-file
         default: false
@@ -129,4 +132,13 @@ permissions:
         default: false
     mobarena.setup.autodegenerate:
         description: Auto-degenerate an arena.
+        default: false
+    mobarena.setup.saveitem:
+        description: Store the currently held item as a saved item.
+        default: false
+    mobarena.setup.deleteitem:
+        description: Delete a saved item.
+        default: false
+    mobarena.setup.loaditem:
+        description: Set a saved item as the currently held item.
         default: false
